--- a/project03/index.html
+++ b/project03/index.html
@@ -27,27 +27,26 @@
             <figure></figure>
             <article>
                 <div class="step" data-step="1" data-scrollama-index="0">
-					<p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museum, like the Cooper Hewitt, Smithsonian?<br>
-                    This project explores their collection from <b>577 greeting cards</b>,
-                    uncovering the design elements that make these cards memorable.</p>
-				</div>
-				<div class="step" data-step="2" data-scrollama-index="1">
-					<p>We usually send the card by ocassion, some occasion are more popular than the other. Most of the cards in this collection was gave as a gift to the museum from people like you. Let's see the most popular ocassion</p>
-				</div>
+                    <p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museums like the Cooper Hewitt, Smithsonian?<br>
+                    This project explores their collection of <b>577 greeting cards</b>, uncovering the design elements that make these cards memorable.</p>
+                </div>
+                <div class="step" data-step="2" data-scrollama-index="1">
+                    <p>We usually send greeting cards for specific occasions, and some occasions are more popular than others. Most of the cards in this collection were donated to the museum by people like you. Let’s explore the most popular occasions.</p>
+                </div>
                 <div class="step" data-step="3" data-scrollama-index="2">
-					<p>Each occasion have variety of elements and color inside that represent. If we look into the vibrant color from each cards some pallete are more popular than other. Warm tone take the most part of it and only few are blue.</p>
-				</div>
-				<div class="step" data-step="4" data-scrollama-index="3">
-					<p>When come to the elements. They are not variety as color, some of them are using over and over. It can group into the 10 categories. The most part is easy to understand visual not abstract and most of them do not have text on the card cover just represent by the visual only</p>
-				</div>
+                    <p>Each occasion features a variety of design elements and colors that represent it. If we examine the vibrant colors of these cards, some palettes stand out as more popular than others. Warm tones dominate the collection, while blue tones are less common.</p>
+                </div>
+                <div class="step" data-step="4" data-scrollama-index="3">
+                    <p>When it comes to design elements, they are less varied than colors. Many designs repeat similar themes, which can be grouped into 10 categories. Most cards feature straightforward, easy-to-understand visuals rather than abstract designs, and many do not include text on the cover, relying solely on imagery.</p>
+                </div>
                 <div class="step" data-step="5" data-scrollama-index="4">
-					<p>The combination of color and element in each occasion are also slightly different. Nuture are not really green. Geometric is the most vibrant and colorful (...)</p>
-				</div>
+                    <p>The combination of colors and elements for each occasion also varies slightly. Nature-themed cards are not predominantly green, while geometric designs are often the most vibrant and colorful</p>
+                </div>                
             </article>
         </section>
         <section id="summary">
             <h2>Yours Cards</h2>
-            <p>What about yours? Are some greeting card in the collection are your favorite, Select the choice to see the result that match yours</p>
+            <p>What about you? Are any of the greeting cards in the collection your favorites? Select a choice to see the results that match your preferences.</p>
             <div id="filter">
                 <div id="occasion-filter"></div>
                 <div id="element-filter"></div>
@@ -62,7 +61,7 @@
             <div id="card">
             <p>Thank you</p>
             <h3><u>Methodology</u></h3>
-            <p>The data of greeting cards in this project is from Cooper Hewitt Smithsonian, Design Museum API, categorized by the title, description text, or text that appear on the cards manually. For the colors using Vibrant.js, so some of them are not totally accurated.</p>
+            <p>The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js, so some results may not be entirely accurate.</p>
             <div>
             <button>Back to top</button>
             <script>
