--- a/project03/index.html
+++ b/project03/index.html
@@ -43,29 +43,34 @@
               
         </section>
         <section id="scrolly">
+            <div class="step">
+                <p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museums like the Cooper Hewitt, Smithsonian?<br><br>
+                This project explores their collection of <b>577 greeting cards</b>, unfolding the design elements that make these cards memorable.
+                <br><br>
+                ▿ Scroll down ▿</p>
+            </div>
             <figure></figure>
             <article>
-                <div class="step" data-step="1" data-scrollama-index="0">
-                    <p>Most of us have received or sent a greeting card, keeping some as treasured mementos. But have you ever wondered about the greeting cards collected by design museums like the Cooper Hewitt, Smithsonian?<br>
-                    This project explores their collection of <b>577 greeting cards</b>, uncovering the design elements that make these cards memorable.</p>
-                </div>
                 <div class="step" data-step="2" data-scrollama-index="1">
-                    <p>We usually send greeting cards for specific occasions, and some occasions are more popular than others. Most of the cards in this collection were donated to the museum by people like you. Let’s explore the most popular occasions.</p>
+                    <p>We usually send greeting cards for specific occasions, and some occasions are more popular than others. Most of the cards in this collection were donated to the museum by people like you. Let’s explore by <b>click on each occasions.</b></p>
                 </div>
                 <div class="step" data-step="3" data-scrollama-index="2">
-                    <p>Each occasion features a variety of design elements and colors that represent it. If we examine the vibrant colors of these cards, some palettes stand out as more popular than others. Warm tones dominate the collection, while blue tones are less common.</p>
+                    <p>Each occasion features a variety of design elements and colors that represent it. If we examine the vibrant colors of these cards, some palettes stand out as more popular than others. <b>Warm tones</b> dominate the collection, while blue tones are less common.</p>
                 </div>
                 <div class="step" data-step="4" data-scrollama-index="3">
-                    <p>When it comes to design elements, they are less varied than colors. Many designs repeat similar themes, which can be grouped into 10 categories. Most cards feature straightforward, easy-to-understand visuals rather than abstract designs, and many do not include text on the cover, relying solely on imagery.</p>
+                    <p>Design elements in the collection are less varied, often repeating similar themes that can be grouped into <b>10 categories</b>. The most popular themes include <b>Human, Nature, and Flower</b> motifs. Most cards feature straightforward, easily recognizable visuals rather than abstract designs. Additionally, many include text on the cover, enhancing the imagery rather than relying solely on it.</p>
                 </div>
                 <div class="step" data-step="5" data-scrollama-index="4">
-                    <p>The combination of colors and elements for each occasion also varies slightly. Nature-themed cards are not predominantly green, while geometric designs are often the most vibrant and colorful</p>
+                    <p>The combination of colors and design elements varies subtly across occasions. Warm colors are used across all elements, even in nature-themed designs, which are often not green. Cool colors tend to appear more in geometric shapes or architectural designs. <b>Flowers with warm tones</b>, however, seem to be the perfect choice for any occasion.</p>
                 </div>                
             </article>
         </section>
         <section id="summary">
             <h2>Yours Cards</h2>
-            <p>What about you? Are any of the greeting cards in the collection your favorites? Select a choice to see the results that match your preferences.</p>
+            <p>What about you?<br>
+                Are any of the greeting cards in the collection your favorites?<br>
+                Select a choice to see the results that match your preferences.
+            </p>
             <div id="filter">
                 <div id="occasion-filter"></div>
                 <div id="element-filter"></div>
@@ -77,7 +82,7 @@
             <img id="envelope" src="assets/envelope.svg" />
         </section>
         <section id="outro">
-            <div id="card">
+            <div class="card">
             <p>Thank you</p>
             <h3><u>Methodology</u></h3>
             <p>The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js, so some results may not be entirely accurate.</p>
