adjust filter button order

--- a/project03/index.html
+++ b/project03/index.html
@@ -127,7 +127,7 @@
             <div class="card">
             <p>Thank you</p>
             <h3><u>Methodology</u></h3>
-            <p>The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js, so some results may not be entirely accurate.</p>
+            <p style="padding: 5% 20%;">The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js, so some results may not be entirely accurate.</p>
             <div>
             <button>↑ Back to top</button>
             <script>
