add github link

--- a/project03/index.html
+++ b/project03/index.html
@@ -118,8 +118,8 @@
         <section id="outro">
             <div class="card">
                 <img src="assets/logo.svg" width="200px" style="padding: 16px; transform: translateX(20px);">
-                <h3><u>Thank you</u></h3>
-                <p style="padding: 4% 15%;">The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js, so some results may not be entirely accurate.</p>
+                <h3>Thank you</h3>
+                <p style="padding: 4% 15%;">The data for this project comes from the Cooper Hewitt Smithsonian Design Museum API. The cards were categorized manually based on their titles, description texts, or the text that appears on the cards. Colors were analyzed using Vibrant.js. <a href="https://github.com/monsicha/major-studio-1">GitHub</a></p>
                 <div>
                 <button>↑ Back to top</button>
                 <script>
@@ -136,7 +136,7 @@
     
 
     <footer>
-        <label>2024 © Monsicha Srisuantang ✣ MS Data Visualization, Parsons School of Design</label>
+        <label>2024 © <a id="portfolio-link" href="https://monsicha.info/">Monsicha Srisuantang</a> ✣ MS Data Visualization, Parsons School of Design</label>
     </footer>
 </body>
 </html>
